--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build:
     runs-on: ubuntu-latest
-    needs: linter_analysis
+    needs: run-lint
     if: ${{ success() }}
     steps:
     - name: Build the Docker image
