--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,5 @@ jobs:
     if: ${{ success() }}
     steps:
       - name: Build the Docker image
+        # shellcheck disable=SC2046
         run: docker build . --file Dockerfile --tag node_devops_olexandr:$(date +%s)
