--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build:
     runs-on: ubuntu-latest
-    needs: run-lint
-    if: ${{ success() }}
+#    needs: run-lint
+#    if: ${{ success() }}
     steps:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
