--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,6 @@ jobs:
 #    if: ${{ success() }}
     steps:
       - name: Build the Docker image
+        with:
+          context: .
         run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
