--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,9 @@ jobs:
 #    if: ${{ success() }}
     steps:
       - name: Build the Docker image
+        uses: docker/build-push-action@v3
         with:
           context: .
-        run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
+#        with:
+#          context: .
+#        run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
