--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
-
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: .
+        #run: docker build . --file Dockerfile --tag node_devops_olexandr:"$(date +%s)"
+        uses: docker/build-push-action@v3
+        with:
+          context: .
