--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,7 @@ jobs:
           DEFAULT_BRANCH: "main"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build:
+    environment: prod
     runs-on: ubuntu-latest
 #    needs: run-lint
 #    if: ${{ success() }}
