--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
   build:
     environment: prod
     runs-on: ubuntu-latest
-#    needs: run-lint
-#    if: ${{ success() }}
+    needs: run-lint
+    if: ${{ success() }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
